--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="row justify-content-center align-items-center">
                     <div class="col-12 col-lg order-last order-lg-first">
-                        <p class="mb-0"><strong>El quinto período: colonización, política fiscal y violencia.</strong> Desde 1949 a 1960 es una época de mucha actividad de la Federación Nacional de Cafeteros, que pasa de fomentar la parcelación de haciendas en el período anterior, a fomentar la colonización e impulsar la aparcería en este nuevo período. El gobierno de Mariano Ospina Pérez estableció el Instituto de Parcelación, Colonización y Defensa Forestal, en 1949: compraron y parcelaron haciendas, pero se adjudicaron de manera sesgada a miembros del partido conservador. </p>
+                        <p class="mb-0"><strong>La dictadura cedió y surge el frente nacional, que continúa la propuesta de tributación de la tierra, lo que atemoriza a los terratenientes y los mueve hacia la reforma agraria.</strong> Los cuales iniciaron un período de violencia que desplaza a los campesinos hacia las urbes y tierra planas del Valle y el Tolima, acabando con casi 400 mil fincas, la mayoría en zonas de ladera. Una segunda fase de la violencia entre 1954 y 1962 causa un detrimento en el valor de la renta y el salario real (Arango, 1987).</p>
                     </div>
                     <div class="col-auto mb-5 mb-lg-0 order-first order-lg-last"><img src="assets/images/pages/tema_1/icon_1_12.svg" alt="" style="width:150px; display:block; margin:0 auto;" /></div>
                 </div>
