--- a/public/index.html
+++ b/public/index.html
@@ -52,22 +52,30 @@
                 <div class="brand-line-primary"></div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Reconocer el modelo organizacional según criterios técnicos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span> Reconocer el modelo organizacional según criterios técnicos.</span></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Establecer un modelo organizacional teniendo en cuenta necesidades del entorno y parámetros técnicos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span>Establecer un modelo organizacional teniendo en cuenta necesidades del entorno y parámetros técnicos.</span></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Verificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span>erificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.</span></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Ajustar plan de implementación del modelo de desarrollo organizacional cumpliendo parámetros técnicos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span>Ajustar plan de implementación del modelo de desarrollo organizacional cumpliendo parámetros técnicos.</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
