--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -210,7 +210,7 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col-12">
-                        <p class="mb-0">En 1954, la dictadura militar organizó colonizaciones pero esta inversión, por demás muy grande, se perdió por el fracaso del proceso en menos de dos años. <strong>A la legislación impuesta hasta el momento, se suma la carga tributaria de la tierra</strong>. En 1954 la burguesía vallecaucana fundó la Corporación Autónoma del Valle del Cauca (CVC) con un impuesto adicional al predial. La junta militar expidió el decreto 290 de 1957 que obligaba a los dueños de las tierras mecanizables un uso del 100% y a los dueños de las tierras cultivables en un 15% como mínimo, so pena de ver quintuplicado el impuesto predial en diez años, este era del 2%. Luego la medida se restringe a 10.000 de hectáreas. en cuatro regiones de Colombia, esto acompañado de estímulos y exenciones a los empresarios agrícolas.</p>
+                        <p class="mb-0">En 1954, la dictadura militar organizó colonizaciones pero esta inversión, por demás muy grande, se perdió por el fracaso del proceso en menos de dos años. <strong>A la legislación impuesta hasta el momento, se suma la carga tributaria de la tierra</strong>. En 1954 la burguesía vallecaucana fundó la Corporación Autónoma del Valle del Cauca (CVC) con un impuesto adicional al predial. La junta militar expidió el decreto 290 de 1957 que obligaba a los dueños de las tierras mecanizables un uso del 100% y a los dueños de las tierras cultivables en un 15% como mínimo, so pena de ver quintuplicado el impuesto predial en diez años, este era del 2%. Luego la medida se restringe a 10.000 de hectáreas. En cuatro regiones de Colombia, esto acompañado de estímulos y exenciones a los empresarios agrícolas.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center align-items-center">
@@ -308,7 +308,7 @@
                 </div>
                 <div class="row mb-4">
                     <div class="col-12">
-                        <p class="mb-0"><strong>El quiebre definitivo de la reforma denominado el mercado de tierras (1995 a 1999)</strong>. La globalización de la economía con la consiguiente apertura de mercados, la nueva constitución de 1991, las intenciones de modernización del estado (la aplicación de las políticas neoliberales producto de la receta del consenso de Washington en los años 80), la agudización del conflicto, el narcoparamilitarismo, el despojo de tierras, la violación de derechos humanos, las acciones guerrilleras, el asesinato sitemático de la Unión Patriótica, la crisis económica (1998-2001), la incidencia de la Organización Mundial de Comercio (OMC) y los intentos de acuerdos de paz, son, entre otros, los hechos del contexto en los intentos de reforma agraria hasta el cambio de siglo. </p>
+                        <p class="mb-0"><strong>El quiebre definitivo de la reforma denominado el mercado de tierras (1995 a 1999)</strong>. La globalización de la economía con la consiguiente apertura de mercados, la nueva constitución de 1991, las intenciones de modernización del estado (la aplicación de las políticas neoliberales producto de la receta del consenso de Washington en los años 80), la agudización del conflicto, el narcoparamilitarismo, el despojo de tierras, la violación de derechos humanos, las acciones guerrilleras, el asesinato sistemático de la Unión Patriótica, la crisis económica (1998-2001), la incidencia de la Organización Mundial de Comercio (OMC) y los intentos de acuerdos de paz, son, entre otros, los hechos del contexto en los intentos de reforma agraria hasta el cambio de siglo. </p>
                     </div>
                 </div>
                 <div class="row mb-4">
@@ -316,7 +316,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="mb-0">El Estado colombiano, liderado por César Gaviria, se retira del proceso directo de redistribución de tierra que sólo llevaba dos años operando bajo la Ley 30. Se deja bajo las leyes del mercado el intercambio de tierras, con la apertura de líneas de crédito subsidiadas (Ley 160 de 1994). En los 90 hubo una gran intervención a través de los proyectos PNUD-FAO, que dió origen a la ley 160. En este período vuelve a concentrarse la tierra a los niveles anteriores a Barco, por efecto sinérgico de todos los factores mencionados anteriormente. Como consecuencia de ello, nadie quería comprar tierras a pesar de las facilidades para las transacciones orientadas desde el estado, el fracaso de esta política es rotundo, pues se pensó para un país sin violencia; es decir, para otro país. El Ministerio de Agricultura se dedicó al fortalecimiento de las cadenas productivas más que a la redistribución de la propiedad (Machado, 2009). </p>
+                        <p class="mb-0">El Estado colombiano, liderado por César Gaviria, se retira del proceso directo de redistribución de tierra que solo llevaba dos años operando bajo la Ley 30. Se deja bajo las leyes del mercado el intercambio de tierras, con la apertura de líneas de crédito subsidiadas (Ley 160 de 1994). En los 90 hubo una gran intervención a través de los proyectos PNUD-FAO, que dio origen a la ley 160. En este período vuelve a concentrarse la tierra a los niveles anteriores a Barco, por efecto sinérgico de todos los factores mencionados anteriormente. Como consecuencia de ello, nadie quería comprar tierras a pesar de las facilidades para las transacciones orientadas desde el estado, el fracaso de esta política es rotundo, pues se pensó para un país sin violencia; es decir, para otro país. El Ministerio de Agricultura se dedicó al fortalecimiento de las cadenas productivas más que a la redistribución de la propiedad (Machado, 2009). </p>
                     </div>
                 </div>
             </div>
@@ -351,7 +351,7 @@
             <div class="pill mb-5" style="padding:2rem; background-color:white; border-radius:10px;">
                 <div class="row mb-3">
                     <div class="col-12">
-                        <h2 style="color:#00838F">Décimoprimer período</h2>
+                        <h2 style="color:#00838F">Decimoprimer período</h2>
                     </div>
                 </div>
                 <div class="row align-items-center mb-4">
