--- a/public/material.html
+++ b/public/material.html
@@ -51,22 +51,30 @@
                 <div class="brand-line-primary"></div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Reconocer el modelo organizacional según criterios técnicos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span> Reconocer el modelo organizacional según criterios técnicos.</span></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Establecer un modelo organizacional teniendo en cuenta necesidades del entorno y parámetros técnicos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span>Establecer un modelo organizacional teniendo en cuenta necesidades del entorno y parámetros técnicos.</span></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Verificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span>erificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.</span></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card resultado-item">
                     <div class="card-body">
-                        <li>Ajustar plan de implementación del modelo de desarrollo organizacional cumpliendo parámetros técnicos.</li>
+                        <ul class="bg-color-dark mb-0">
+                            <li class="mb-0"><span>Ajustar plan de implementación del modelo de desarrollo organizacional cumpliendo parámetros técnicos.</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -152,7 +160,7 @@
                             <div class="col-auto mb-5 mb-lg-0"><img src="assets/images/pages/introduccion/img_intro_01.svg" alt="" style="width:100%"></div>
                             <div class="col-12 col-lg">
                                 <p><strong>El conocimiento del contexto histórico del desarrollo rural en el mundo, en la región latinoamericana y por supuesto en Colombia, son el punto de partida del diagnóstico de las problemáticas que afectan las comunidades, regiones u organizaciones rurales.</strong> </p>
-                                <p>Se puede decir decir que a partir de la conjugación de varias corrientes de pensamiento, sean estas científicas o no, con el modo de vida generado en la industrialización de la producción, se concibe que existe una continua transformación de la sociedad que no es cíclica y que es catalizada por diversos factores socio-políticos, donde se esclarece la posibilidad de intervenir, como sujetos de cambio, de manera creativa y transformadora la vida y el curso de las sociedades hacia el bienestar de todos sus actores. En este sentido, es común ver de manera frecuente términos como desarrollo humano, desarrollo sostenible, progreso, desarrollo económico, industrialización del campo, desarrollo territorial, innovación y desarrollo rural, en medio de discusiones y planteamientos en distintos contextos. </p>
+                                <p>Se puede decir que a partir de la conjugación de varias corrientes de pensamiento, sean estas científicas o no, con el modo de vida generado en la industrialización de la producción, se concibe que existe una continua transformación de la sociedad que no es cíclica y que es catalizada por diversos factores socio-políticos, donde se esclarece la posibilidad de intervenir, como sujetos de cambio, de manera creativa y transformadora la vida y el curso de las sociedades hacia el bienestar de todos sus actores. En este sentido, es común ver de manera frecuente términos como desarrollo humano, desarrollo sostenible, progreso, desarrollo económico, industrialización del campo, desarrollo territorial, innovación y desarrollo rural, en medio de discusiones y planteamientos en distintos contextos. </p>
                             </div>
                         </div>
                         <div class="row justify-content-center mb-5">
