--- a/public/pages/tema-2.html
+++ b/public/pages/tema-2.html
@@ -12,7 +12,7 @@
                     <div class="card-media__body">
                         <div class="card__figure"><img src="assets/images/pages/tema_2/icon_2_01.svg" alt="" style="width:100px" /></div>
                         <div class="card__copy">
-                            <p class="mb-0"><strong>La Ley 1876 de diciembre 27 de 2017 Sistema Nacional de Innovación Agropecuaria</strong> se crea con el fin de dar respuesta al primer punto del acuerdo de paz y derogar la Ley 607 de 2000 que creó las Unidad Municipal de Asistencia Técnica Agropecuaria (UMATA) y reglamentó la asistencia técnica directa rural; en esta normativa se establecen los criterios para la creación, articulación y puesta en marcha de tres subsistemas, además, de su respectiva reglamentación mediante decretos, resoluciones y ordenanzas.</p>
+                            <p class="mb-0"><strong>La Ley 1876 de diciembre 27 de 2017 Sistema Nacional de Innovación Agropecuaria</strong> se crea con el fin de dar respuesta al primer punto del acuerdo de paz y derogar la Ley 607 de 2000 que creó la Unidad Municipal de Asistencia Técnica Agropecuaria (UMATA) y reglamentó la asistencia técnica directa rural; en esta normativa se establecen los criterios para la creación, articulación y puesta en marcha de tres subsistemas, además, de su respectiva reglamentación mediante decretos, resoluciones y ordenanzas.</p>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                 <p class="mb-2"><strong>Participación de los actores en la formulación del PDEA</strong> </p>
                 <p class="mb-4">En la etapa de formulación participan los municipios y distritos, realizando el fortalecimiento de los Consejos Municipales de Desarrollo Rural (CMDR) que son los espacios de diálogo y concertación de las necesidades e iniciativas en materia de extensión agropecuaria; entre los actores que deben tener representación están las comunidades étnicas, las mujeres, los jóvenes y cualquier otra población.</p>
                 <p class="mb-2"><strong>Formulación cuatrienal del PDEA</strong> </p>
-                <p>Solo se debe formular para un periodo nomayor de cuatro años en los cuales las entidades prestadores del servicio de extensión agropecuaria prestarán el servicio a partir de las orientaciones del PDEA.</p>
+                <p>Solo se debe formular para un periodo no mayor de cuatro años en los cuales las entidades prestadoras del servicio de extensión agropecuaria prestarán el servicio a partir de las orientaciones del PDEA.</p>
             </div>
         </div>
         <div class="row">
@@ -531,7 +531,7 @@
         </div>
         <div class="row mb-5">
             <div class="col-12">
-                <p>En esta norma se encuentran los <strong>criterios para la caracterización e identificación de la población</strong>, como que su actividad económica predominante sea la agropecuaria, uso de mano de obra familiar o comunitaria, la <strong>Unidad Agrícola Familar (UAF)</strong> no debe ser mayor a uno (1) y residir o vivir dentro del perímetro funcional de la finca, o territorio colectivo del cual se derivan sus medios de vida. </p>
+                <p>En esta norma se encuentran los <strong>criterios para la caracterización e identificación de la población</strong>, como que su actividad económica predominante sea la agropecuaria, uso de mano de obra familiar o comunitaria, la <strong>Unidad Agrícola Familiar (UAF)</strong> no debe ser mayor a uno (1) y residir o vivir dentro del perímetro funcional de la finca, o territorio colectivo del cual se derivan sus medios de vida. </p>
                 <p class="mb-0">El documento adjunto llamado <strong>lineamientos estratégicos de política pública para la agricultura campesina</strong>, familiar y comunitaria; es donde se direcciona la política de ACFC, en el marco conceptual, diagnóstico de la ACFC, teniendo como base los ejes estructurantes de los lineamientos de política pública ACFC de que trata el <strong>artículo 8 de la resolución 464 de 2017</strong>.</p>
             </div>
         </div>
