Actualización Material descargable (material incompleto)

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                 <div class="card resultado-item">
                     <div class="card-body">
                         <ul class="bg-color-dark mb-0">
-                            <li class="mb-0"><span>erificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.</span></li>
+                            <li class="mb-0"><span>Verificar el proceso de implementación del modelo organizacional de acuerdo con parámetros definidos.</span></li>
                         </ul>
                     </div>
                 </div>
