--- a/public/pages/tema-1.html
+++ b/public/pages/tema-1.html
@@ -323,7 +323,7 @@
             <div class="pill mb-5" style="padding:2rem; background-color:white; border-radius:10px;">
                 <div class="row mb-3">
                     <div class="col-12">
-                        <h2 style="color:#00838F">Décimo período</h2>
+                        <h2 style="color:#00838F">Decimo período</h2>
                     </div>
                 </div>
                 <div class="row mb-4">
